Refactored js to use jQuery functions and squashed some bugs

--- a/src/assets/app.less
+++ b/src/assets/app.less
@@ -25,7 +25,12 @@ html, body {
 //   transform: rotate(-90deg);
 // }
 
-.dim {
+
+// .uk-tab>*>a {
+//   font-size: 1.25rem;
+// }
+
+.dim-border {
   border-bottom: 1.5px rgb(200,200,200) dotted;
 }
 
